[tool.poetry]
name = "design-review"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.14"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.14"
langgraph = "^0.2.61"
openai = "^1.59.7"
unstructured = "^0.16.14"
markdown = "^3.7"
nltk = "^3.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
